提交：GCRoots、强 软 弱 虚四大引用、WeakHashMap