@@ -27,6 +27,7 @@ C --> E[自定义类加载器]__
 > * 堆内存是虚拟机管理的内存中最大的一块，也是垃圾回收最频繁的一块区域，我们程序所有的对象实例都存放在堆内存中
 > * 新生代中的对象存活时间短，只需要在新生代区域中频繁进行GC，老年代中对象生命周期长，内存回收的频率相对较低，不需要频繁进行回收，永久代中回收效果太差，一般不进行垃圾回收
 ### 分代划分
+* 新生代1/3，老年代2/3
 ![image](https://blog.imwj.club//upload/2020/04/37nj67852ui6spb5q2806hm35a.png)
 
 #### 新生代（Young Generation） Minor GC
@@ -87,4 +88,101 @@ C --> E[自定义类加载器]__
 * XX参数：常用
 
 ### XX参数
+#### boolean类型
+* `-`表示关闭，`+`表示开启
+* 查看所有正在运行的Java程序`jps -l`
+* 查看指定参数`jinfo -flag 配置项 程序进程id`，例：jinfo -flag PrintGCDetails 1176
+* 设定指定参数`-XX:-PrintGCDetails`，需要在VM options中配置
+
+#### K-V类型
+* 查看指定参数`jinfo -flag 配置项 程序进程id`，例：jinfo -flag MaxTenuringThreshold 1176
+* 设定指定参数`-XX:MaxTenuringThreshold=15`，需要在VM options中配置(MaxTenuringThreshold是新生代晋级到老年代的次数)
+
+#### jinfo 查看当前运行程序的配置
+* 先要通过`jsp -l`查看运行程序的进程id
+* 查看指定参数`jinfo -flag 配置项 程序进程id`，例：jinfo -flag InitialHeapSize 7328
+
+#### 经典参数-Xms、-Xmx
+* 这两个也是属于XX参数类型的
+* -Xms等价于InitialHeapSize(初始化堆的大小，默认内存1/64)，Xmx等价于MaxHeapSize(最大堆的大小，默认内存1/4)
+* -Xss等价于ThreadStackSize（单个线程栈空间的大小512k-1024k）
+
+#### 盘点查看JVM默认值
+* `=`表示初始值未修改，`:=`手动修改过的值
+* 查看初始值
+```
+java -XX:+PrintFlagsInitial 
+```
+* 主要查看修改更新
+```
+java -XX:+PrintFlagsFinal
+```
+* 运行Java命令的同时打印参数
+```
+java -XX:+PrintFlagsFinal -Xss128k T //T运行Java类的名字
+```
+* 查看Java的Xms、Xmx等常用参数以及GC垃圾收集器
+```
+java -XX:+PrintCommandLineFlags
+```
+
+### JVM常用配置
+* -Xms、-Xmx、-Xss
+* -Xmn：设置年轻代的大小
+* -XX:MetaspaceSize：设置元空间的大小，其实就是用内存条的大小（但默认21M）
+### 总结（案例设置）
+* 1.VM options中配置参数`-XX:+PrintCommandLineFlags`，运行main方法后会打印：Java的Xms、Xmx等常用参数以及GC垃圾收集器
+* 2.配置我们自己的-Xms、-Xmx、-Xss等（UseSerialGC串行收集器）
+```
+-Xms128m -Xmx4096m -Xss1024k -XX:MetaspaceSize=512m -XX:+PrintCommandLineFlags -XX:+PrintGCDetails -XX:+UseSerialGC
+```
+#### InitialHeapSize 
+* -Xms：初始化堆的大小，等价于`-XX:InitialHeapSize`默认大小是内存的1/64
+#### MaxHeapSize
+* -Xmx：最大堆的大小，等价于`-XX:MaxHeapSize`默认大小是内存的1/4
+#### ThreadStackSize
+* -Xss：单个线程栈的大小，等价于`ThreadStackSize`
+#### MetaspaceSize
+* -XX:MetaspaceSize：元空间的大小，默认大小21m
+#### PrintCommandLineFlags
+* -XX:PrintCommandLineFlags：打印Java的常用参数如Xms、Xmx
+#### PrintGCDetails
+* -XX:PrintGCDetails：打印GC回收详情
+#### UseSerialGC
+* -XX:+UseSerialGC：串行垃圾收集器
+
+#### GC详情面板
+* -XX:PrintGCDetails：打印GC回收详情
+```
+[GC (Allocation Failure) [PSYoungGen: 2048K->488K(2560K)] 2048K->708K(9728K), 0.0177434 secs] [Times: user=0.00 sys=0.00, real=0.03 secs] 
+GC名称(Young)         【GC前Young内存占用->GC后Young内存占用(Young总大小)】 【GC前JVM堆占用->GC后JVM堆占用(JVM堆大小)】 【用户耗时，系统耗时，实际耗时】
+```
+
+#### SurvivorRatio
+* `-XX:SurvivorRatio=8`：新生代中Eden/Survivo的比例，默认为8（8：1：1）
+
+#### NewRation
+* `-XX:NewRatio=2 `：堆内存中 老年代/新生代 的比例，默认为2（1 ：2）
+
+#### MaxTenuringThreshold
+* `-XX:MaxTenuringThreshold=15`：新生代晋级到老年代的次数，默认15
+
+### 四大引用（强、软、弱、虚）
+* Reference是Object下的一个子类，java.lang.ref.Reference
+#### 强引用
+* 无论是GC还是OOM都不会清理掉强引用
+```
+Object obj = new Object();
+Object obj1 = obj; //两个都是强引用
+obj = null; //这样会清理掉obj，并不会清理掉obj1
+```
+
+#### 软引用SoftReference
+* 内存充足时保留，内存不够时进行回收
+
+#### 弱引用WeakReference 
+* 只要触发GC弱引用对象就会被回收掉
+* WeakHashMap
+
+#### 虚引用PhantomReference 
 * 
